feature - detail title

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,5 +1,6 @@
 {
   "PRODUCTS_PAGE_TITLE": "Prodotti",
+  "PRODUCT_PAGE_TITLE": "Prodotto",
   "NEW_PRODUCT_BUTTON": "Aggiungi",
   "REMOVE_PRODUCT_BUTTON": "Rimuovi",
   "SELECT_ALL" : "Seleziona tutto",
