feature - chart component init

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -5,6 +5,7 @@
   "REMOVE_PRODUCT_BUTTON": "Rimuovi",
   "SELECT_ALL" : "Seleziona tutto",
   "GRID_LAYOUT": "Layout Griglia",
+  "CHART_LAYOUT": "Grafico Categorie",
   "ROW_LAYOUT": "Layout Riga",
   "FIELDS_LABEL_SELECTION": "Campi da visualizzare",
   "CATEGORY_LABEL": "Categoria",
